maryQuery works on window

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+        <script type="text/javascript" src="./jql/main.js"></script>
+        <script type="text/javascript" src="./jql/dom_node_collection.js"></script>
+        <script type="text/javascript" src="./jql/jsfile.js"></script>
+
+    <title>maryQuery</title>
   </head>
   <body>
-    <h1>To do</h1>
+    <h1>List of to-do's</h1>
 
   <form>
     Add to do:
@@ -14,11 +18,14 @@
     Description:
     <input type="text"  />
 
+    Completed?
+    <input type=Checkbox/>
+    <button />Delete to do</button>
     <input type="submit" />
   </form>
 
 
-    <ul>
+    <ul className="todos">
       <li>  </li>
     </ul>
   </body>
